hphp/test/zend/good/Zend/tests/errmsg_040.php
<?php

class test {
	const TEST = array(1,2,3);
}

echo "Done\n";
?>